# Event-Horizon-Shell

./: .flake8  Event Horizon changelog  README.md  SECURITY.md  __init__.py  main.py  pyproject.toml  readme.txt  requirements.txt  setup.py  tash push --include-untracked  test.sh  test_plugin.py  v1.0.0.py  v1.0.1.py  v1.0.2.py  v1.0.3.py  v1.0.4.py  v1.0.4a.py  v1.0.5.py  v1.0.6.py  v1.0.6.spec  v1.0.7.py  v1_0_4a.py
.github/workflows/: actions.yml  publish.yml  test.yml  workflow.yml
EHS/: .env  __init__.py  __main__.py  art.py  chklib_clrscr.py  chkupd_speedtest.py  constants.py  editors.py  logger.py  plugin_sys.py  shell.py  tools.py  tutorial.py  weather.py
Plugins/: advanced_calc.py  app.py  fg.py  ip_geolocation.py  math_quiz.py
archive/: archive  v1.0.0.py  v1.0.1.py  v1.0.2.py  v1.0.3.py  v1.0.4.py  v1.0.4a.py  v1.0.5.py  v1.0.6.py
archive /v1.2.0/EHS/: __init__.py
archive/v1.0.9/EHS/: __init__.py  calc.py  chkupd_speedtest.py  shell.py
archive/v1.1.0/EHS/: __init__.py  chklib_clrscr.py  constants.py  shell.py  tools.py
archive/v1.1.1/: main.py
archive/v1.1.1/EHS/: chklib_clrscr.py
archive/v1.2.0/: main.py
archive/v1.2.0/EHS/: aliases.py  archiver.py  art.py  calc.py  chklib_clrscr.py  constants.py  weather.py
