[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-horizon-shell"
version = "1.1.2"
authors = [
    { name = "QUIK1001", email = "belov0507artem@gmail.com" }
]
description = "Event Horizon Shell - console shell"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/QUIK1001/Event-Horizon-Shell"
