[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "event-horizon-shell"
version = "1.1.2.post4"
description = "Event Horizon Shell - advanced terminal shell with multiple utilities"
readme = "README.md"
authors = [
    { name = "QUIK1001", email = "your-email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.6"
dependencies = [
    "psutil",
    "requests", 
    "colorama",
    "packaging",
    "art",
    "rich"
]

[project.scripts]
ehs = "__main__:menu"

[tool.setuptools.packages.find]
where = ["."]
